@@ -148,7 +148,6 @@ AC_CHECK_LIB(nsl, main)
 
 AC_CHECK_FUNCS(strtok_r)
 AC_CHECK_FUNCS(sigset)
-AC_CHECK_FUNCS(sigprocmask)
 AC_CHECK_FUNCS(res_search)
 AC_CHECK_FUNCS(dn_expand)
 AC_CHECK_FUNCS(snprintf)
